--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,39 +4,73 @@
     right: 5px;
     left: 5px;
     z-index: 1;
+    transition: transform 0.3s;
+}
+
+.header--hide-top {
+    transform: translateY(calc(-100% - 5px + 105px));
+}
+
+.header-top {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 10px 50px;
+    a {
+        transition: color 150ms;
+        &:hover {
+            color: var(--accent-clr);
+        }
+    }
+}
+
+.header-bottom {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    row-gap: 30px;
     min-height: 100px;
     padding: 0 50px;
     border-radius: 50px;
-    background-color: rgba(0, 0, 0, 0.1);
+    border: 2px solid var(--accent-clr);
+    background: rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+}
+
+.header-bottom__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 30px;
 }
 
 .header__logo {
     display: flex;
     justify-content: center;
     align-items: center;
+
     img {
         width: clamp(35px, 4vw, 40px);
     }
+
     span {
         font-size: clamp(1.5rem, 4vw, 2rem);
     }
 }
 
 a {
-    color: #fff;
+    color: var(--txt-clr);
 }
 
 .nav {
+    position: relative;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 50%;
-    ul {
+
+    .nav-list {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -51,17 +85,18 @@ a {
     padding: 0 10px;
     border-radius: 20px;
     transition: background-color 150ms;
+
     &:hover {
-        background: rgb(100, 218, 212);
+        background: var(--accent-clr);
     }
 }
 
 .nav__link--active {
-    background: rgb(100, 218, 212);
+    background: var(--accent-clr);
 }
 
 .nav__btn-link {
-    border: 1px solid rgb(100, 218, 212);
+    border: 2px solid var(--accent-clr);
 }
 
 .nav__find-us-icon,
@@ -72,12 +107,64 @@ a {
     aspect-ratio: 1 / 1;
     border-radius: 50%;
     transition: background-color 150ms;
+
     img {
         width: 20px;
     }
+
     &:hover {
-        background: rgb(100, 218, 212);
+        background: var(--accent-clr);
     }
+}
+
+.header-bottom__grid {
+    display: grid;
+    grid-template-rows: 0fr;
+    overflow: hidden;
+    transition: all 0.3s;
+    .menu-list {
+        overflow: hidden;
+        li {
+            border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+        }
+    }
+}
+
+//
+.menu-item {
+    opacity: 0;
+    transition: opacity 300ms;
+}
+
+.menu-item--active {
+    opacity: 1;
+    transition: opacity 600ms 0.1s;
+}
+
+.menu-link {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 60px;
+    transition: all 300ms;
+
+    span {
+        font-weight: 600;
+    }
+
+    span:nth-last-of-type(1) {
+        font-weight: 300;
+    }
+
+    &:hover {
+        padding: 0 10px;
+        color: var(--accent-clr);
+    }
+}
+
+.menu-link--active {
+    padding: 0 10px;
+    color: var(--accent-clr);
 }
 
 @media (max-width: 1200px) {
@@ -90,16 +177,20 @@ a {
     }
 
     .nav {
-        ul {
+        .nav-list {
             width: 85%;
         }
     }
 }
 
 @media (max-width: 900px) {
-    .header {
+    .header-top {
+        padding: 10px 25px;
+    }
+    .header-bottom {
         padding: 0 25px;
     }
+
     .nav__find-us-item {
         display: none;
     }
@@ -108,14 +199,17 @@ a {
         display: grid;
     }
     .nav {
-        ul {
+        .nav-list {
             width: 70%;
         }
     }
 }
 
 @media (max-width: 800px) {
-    .header {
+    .header-top {
+        padding: 10px 15px;
+    }
+    .header-bottom {
         padding: 0 15px;
     }
 
@@ -124,8 +218,14 @@ a {
         justify-content: flex-end;
         column-gap: 25px;
         width: auto;
-        ul {
+
+        .nav-list {
             display: none;
         }
+    }
+
+    .header-bottom__grid--active {
+        grid-template-rows: 1fr;
+        padding-bottom: 100px;
     }
 }
