--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,5 +1,5 @@
 :root {
-    --bg-clr: rgb(36, 162, 168);
+    --bg-clr: #757575;
     --txt-clr: #fff;
-    --accent-clr: rgb(100, 218, 212);
+    --accent-clr: #6bbf8a;
 }
