--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,7 +5,6 @@
     flex-direction: column;
     margin-top: auto;
     min-height: 400px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.1);
     padding: 25px 25px 10px;
     color: var(--txt-clr);
@@ -73,6 +72,13 @@
         font-size: 1.5rem;
         font-weight: 500;
     }
+}
+
+.custom-hr {
+    width: 100%;
+    height: 10px;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.5);
 }
 
 .footer__bottom {
