--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -32,7 +32,7 @@
     min-height: 100px;
     padding: 0 50px;
     border-radius: 50px;
-    border: 2px solid var(--accent-clr);
+    // border: 1px solid rgba(255, 255, 255, 0.5);
     background: rgba(0, 0, 0, 0.1);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
