--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -6,7 +6,10 @@
     place-content: center;
     width: 60px;
     height: 60px;
-    background-color: rgba(0, 0, 0, 0.1);
+    // background-color: rgba(0, 0, 0, 0.1);
+    background: rgba(0, 0, 0, 0.1);
+
+    // border: 1px solid rgba(255, 255, 255, 0.5);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     border-radius: 50%;
@@ -24,17 +27,16 @@
     span {
         display: grid;
         place-content: center;
-        background-color: rgba(0, 0, 0, 0.1);
+        // background-color: rgba(0, 0, 0, 0.1);
         width: 40px;
         height: 40px;
         border-radius: 50%;
-        color: white;
         cursor: pointer;
         transition: background-color 150ms;
 
-        &:hover {
-            background-color: rgba(0, 0, 0, 0.5);
-        }
+        // &:hover {
+        // background-color: rgba(0, 0, 0, 0.5);
+        // }
 
         img {
             width: 25px;
