--- a/src/pages/Services/Services.scss
+++ b/src/pages/Services/Services.scss
@@ -1,43 +1,3 @@
-.services {
-    padding: 170px 0;
-}
-
-// Reusable stlye
-.title-container {
-    padding: 50px;
-    margin-bottom: 35px;
-    background: rgba(0, 0, 0, 0.1);
-    color: var(--txt-clr);
-    div {
-        display: flex;
-        p {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 5px;
-            pointer-events: none;
-            opacity: 0.5;
-        }
-    }
-    h2 {
-        font-size: 3rem;
-    }
-}
-
-.title-link {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-    border-radius: 15px;
-    transition: background-color 150ms;
-
-    &:hover {
-        background: var(--accent-clr);
-    }
-}
-
 .services-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -53,23 +13,31 @@
     align-items: center;
     width: 100%;
     height: 170px;
-    background: rgba(0, 0, 0, 0.1);
+    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    // box-shadow: inset 0 -10px 10px var(--accent-clr);
+    // background: linear-gradient(
+    //     90deg,
+    //     var(--accent-clr),
+    //     var(--home-bg-clr) 50%
+    // );
+    transition: all 0.3s;
+
     color: var(--txt-clr);
     border-radius: 100px;
     padding: 25px;
     transform: translateY(35px);
     opacity: 0;
-    transition: background-color 300ms, opacity 0.5s, transform 0.5s;
+    // transition: background-color 300ms, opacity 0.5s, transform 0.5s;
+    &:hover {
+        // box-shadow: inset 0 -20px 10px var(--accent-clr);
+    }
     h4 {
         font-weight: 600;
         font-size: 1.2rem;
     }
     p {
         font-weight: 200;
-    }
-
-    &:hover {
-        background: var(--accent-clr);
     }
 }
 
