--- a/src/components/ToTopBtn/ToTopBtn.scss
+++ b/src/components/ToTopBtn/ToTopBtn.scss
@@ -1,19 +1,20 @@
+@use "./../../mixins" as *;
+
 .to-top-btn {
     position: fixed;
-    right: 25px;
-    bottom: 25px;
+    right: 30px;
+    bottom: 30px;
+    z-index: 1;
     display: grid;
     place-content: center;
     width: 60px;
     height: 60px;
-    // background-color: rgba(0, 0, 0, 0.1);
-    background: rgba(0, 0, 0, 0.1);
-
-    // border: 1px solid rgba(255, 255, 255, 0.5);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+    background: rgba(0, 0, 0, 0.25);
+    @include glass-effect;
+    border: 1px solid rgba(255, 255, 255, 0.25);
     border-radius: 50%;
-    transform: translateY(85px);
+    transform: translateY(90px);
+    cursor: pointer;
     transition: transform 300ms;
 
     div {
@@ -22,24 +23,8 @@
         width: 50px;
         height: 50px;
         border-radius: 50%;
-    }
-
-    span {
-        display: grid;
-        place-content: center;
-        // background-color: rgba(0, 0, 0, 0.1);
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        cursor: pointer;
-        transition: background-color 150ms;
-
-        // &:hover {
-        // background-color: rgba(0, 0, 0, 0.5);
-        // }
-
         img {
-            width: 25px;
+            width: 30px;
         }
     }
 }
