--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,9 +1,15 @@
 @use "./../../mixins" as *;
 
 .home {
-    position: relative;
     @include flex-center;
     flex-direction: column;
+    padding-bottom: 30px;
+}
+
+.home__top {
+    @include flex-center;
+    flex-direction: column;
+    width: 100%;
     height: 100vh;
     row-gap: 25px;
     h2 {
@@ -50,9 +56,81 @@
     }
 }
 
+.home__services-title {
+    font-size: 2rem;
+    padding: 30px 0;
+}
+
+.home__services {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 50px;
+    margin: 0 50px;
+}
+
+.home__service {
+    position: relative;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.416);
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    column-gap: 25px;
+    height: 170px;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+
+    transition: all 0.3s;
+
+    color: var(--txt-clr);
+    border-radius: 85px;
+    padding: 25px;
+    h4 {
+        font-weight: 600;
+        font-size: 1.2rem;
+    }
+    p {
+        font-weight: 200;
+    }
+}
+
+.home__service:not(:nth-last-of-type(1)) {
+    background: var(--accent-clr);
+}
+
+.view-more {
+    position: absolute;
+    display: grid;
+    place-content: center;
+    width: 100%;
+    height: 170px;
+    border-radius: 85px;
+    transition: background-color 0.15s;
+
+    &:hover {
+        background: var(--accent-clr);
+    }
+}
+
+@media (max-width: 1300px) {
+    .home__services {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 25px;
+        margin: 0 25px;
+    }
+}
+
+@media (max-width: 900px) {
+    .home__services {
+        grid-template-columns: repeat(1, 1fr);
+        gap: 15px;
+        margin: 0 15px;
+    }
+}
+
 @media (max-width: 500px) {
     .btn-container {
         flex-direction: column;
-        row-gap: 25px;
+        row-gap: 30px;
     }
 }
