--- a/src/pages/Services/Services.scss
+++ b/src/pages/Services/Services.scss
@@ -1,3 +1,7 @@
+.services {
+    padding-bottom: 30px;
+}
+
 .services-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -15,23 +19,14 @@
     height: 170px;
     background: rgba(255, 255, 255, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.5);
-    // box-shadow: inset 0 -10px 10px var(--accent-clr);
-    // background: linear-gradient(
-    //     90deg,
-    //     var(--accent-clr),
-    //     var(--home-bg-clr) 50%
-    // );
+
     transition: all 0.3s;
 
     color: var(--txt-clr);
-    border-radius: 100px;
+    border-radius: 85px;
     padding: 25px;
     transform: translateY(35px);
     opacity: 0;
-    // transition: background-color 300ms, opacity 0.5s, transform 0.5s;
-    &:hover {
-        // box-shadow: inset 0 -20px 10px var(--accent-clr);
-    }
     h4 {
         font-weight: 600;
         font-size: 1.2rem;
