--- a/src/pages/Appointment/Appointment.scss
+++ b/src/pages/Appointment/Appointment.scss
@@ -2,14 +2,8 @@
     padding-bottom: 30px;
 }
 
-.calendar {
+.google-calendar {
     width: 100%;
     height: 1000px;
     background: #fff;
-}
-
-@media (max-width: 650px) {
-    .calendar {
-        height: 1600px;
-    }
 }
