--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,14 +1,8 @@
-.find-us {
+.contacts {
+    padding-bottom: 30px;
 }
 
-.map {
+.contacts__google-map {
     width: 100%;
     height: 500px;
-    padding: 0 30px 30px;
-}
-
-@media (max-width: 900px) {
-    .map {
-        padding: 0 15px 30px;
-    }
 }
