--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -15,9 +15,15 @@
 }
 
 .footer__link {
-    transition: color 150ms;
+    display: grid;
+    place-items: center;
+    height: 30px;
+    border-radius: 15px;
+    padding: 0 7.5px;
+    transition: background-color 150ms;
+
     &:hover {
-        color: var(--accent-clr);
+        background: var(--accent-clr);
     }
 }
 
@@ -47,6 +53,7 @@
     p {
         font-size: 1.5rem;
         font-weight: 500;
+        margin-bottom: 10px;
     }
 }
 
@@ -57,24 +64,24 @@
         align-items: center;
         height: 30px;
         border-radius: 15px;
-        padding: 0 10px;
+        padding: 0 7.5px;
     }
 }
 
 .day--active {
     background: var(--accent-clr);
-    color: #000;
 }
 
 .footer__header-navigation {
     p {
         font-size: 1.5rem;
         font-weight: 500;
+        margin-bottom: 10px;
     }
     ul {
         display: flex;
+        align-items: flex-start;
         flex-direction: column;
-        row-gap: 10px;
     }
 }
 
@@ -82,6 +89,24 @@
     p {
         font-size: 1.5rem;
         font-weight: 500;
+        margin-bottom: 10px;
+    }
+    ul {
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        a {
+            display: grid;
+            place-content: center;
+            height: 30px;
+            border-radius: 15px;
+            padding: 0 7.5px;
+            transition: background-color 150ms;
+
+            &:hover {
+                background: var(--accent-clr);
+            }
+        }
     }
 }
 
