--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -1,8 +1,197 @@
+@use "./../../mixins" as *;
+
 .contacts {
     padding-bottom: 30px;
 }
 
+.contacts__appointment-title {
+    font-size: 2rem;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.contacts-details {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 30px;
+    padding: 0 30px 30px;
+
+    div {
+        width: 100%;
+        height: 200px;
+        @include flex-center;
+        flex-direction: column;
+        border: 1px solid rgba(255, 255, 255, 0.25);
+        border-radius: 100px;
+        transition: border 150ms;
+
+        &:hover {
+            border: 1px solid var(--accent-clr);
+        }
+    }
+}
+
+.contacts__phone-img,
+.contacts__email-img,
+.contacts__address-img {
+    width: 40px;
+}
+
+.contacts__phone,
+.contacts__email,
+.contacts__address {
+    font-size: 2rem;
+}
+
+.contacts__phone-link,
+.contacts__email-link,
+.contacts__address-link {
+    align-self: center;
+    font-size: 1rem;
+    font-weight: 200;
+    transition: color 150ms;
+
+    &:hover {
+        color: var(--accent-clr);
+    }
+}
+
+.contacts-details__address-btn {
+    @include grid-center;
+    margin-top: 10px;
+    height: 30px;
+    border-radius: 15px;
+    padding: 0 7.5px;
+    background: var(--accent-clr);
+    border: 1px solid var(--accent-clr);
+    transition: background-color 150ms;
+
+    &:hover {
+        background: transparent;
+    }
+}
+
+.contacts-form {
+    @include flex-center;
+    flex-direction: column;
+    row-gap: 10px;
+    width: 50%;
+    margin: auto;
+    padding: 0 30px 30px;
+}
+
+.contacts-form__inputs {
+    display: flex;
+    gap: 10px;
+    width: 100%;
+}
+
+.contacts-form__input-wrapper {
+    position: relative;
+    flex-grow: 1;
+
+    &:focus-within .contacts-form__label {
+        top: 0;
+        font-size: 12px;
+    }
+}
+
+.contacts-form__input {
+    height: 60px;
+    border-radius: 30px;
+    width: 100%;
+    padding: 0 15px;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    transition: border 150ms;
+
+    &:focus {
+        border: 1px solid var(--accent-clr);
+    }
+}
+
+.contacts-form__label {
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    padding-left: 15px;
+    transition: all 0.3s;
+}
+
+.contacts-form__label--active {
+    top: 0;
+    font-size: 12px;
+}
+
+.contacts-form__select {
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    padding-left: 15px;
+    background: var(--bg-clr);
+    transition: border 150ms;
+
+    &:focus {
+        border: 1px solid var(--accent-clr);
+    }
+}
+
+input[type="date"],
+input[type="time"] {
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    padding-left: 15px;
+    transition: border 150ms;
+
+    &:focus {
+        border: 1px solid var(--accent-clr);
+    }
+}
+
+.contacts-form__btn {
+    border: 1px solid var(--accent-clr);
+    font-weight: inherit;
+    height: 60px;
+    border-radius: 30px;
+    padding: 0 15px;
+    transition: background-color 150ms;
+
+    &:hover {
+        background: var(--accent-clr);
+    }
+}
+
 .contacts__google-map {
+    padding-top: 30px;
     width: 100%;
     height: 500px;
+}
+
+@media (max-width: 1000px) {
+    .contacts-details {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .contacts-form {
+        width: 75%;
+    }
+}
+
+@media (max-width: 700px) {
+    .contacts-details {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 0 15px 30px;
+    }
+
+    .contacts-form {
+        width: 100%;
+        padding: 0 15px 30px;
+    }
+
+    .contacts-form__inputs {
+        flex-direction: column;
+    }
 }
