--- a/src/_mixins.scss
+++ b/src/_mixins.scss
@@ -10,6 +10,12 @@
     align-items: center;
 }
 
+@mixin flex-around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 @mixin glass-effect {
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
@@ -18,4 +24,9 @@
 @mixin grid-center {
     display: grid;
     place-content: center;
+}
+
+@mixin appearance {
+    -webkit-appearance: none;
+    appearance: none;
 }
