--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,7 @@
 :root {
     --home-bg-clr: #000;
     --bg-clr: #000;
+    --bg-semi-tp-clr: rgba(0, 0, 0, 0.5);
     --txt-clr: #fff;
     --accent-clr: #77df92;
 }
