--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -27,6 +27,10 @@
     }
 }
 
+.footer__link--active {
+    background: var(--accent-clr);
+}
+
 .footer__header {
     width: 100%;
     display: flex;
