--- a/src/pages/Services/Services.scss
+++ b/src/pages/Services/Services.scss
@@ -1,3 +1,5 @@
+@use "./../../mixins" as *;
+
 .services {
     padding-bottom: 30px;
 }
@@ -5,27 +7,22 @@
 .services-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 50px;
-    margin: 0 50px;
+    gap: 30px;
+    margin: 0 30px;
 }
 
 .service {
-    justify-self: center;
-    display: flex;
-    justify-content: space-around;
-    column-gap: 25px;
-    align-items: center;
+    @include flex-around;
+    column-gap: 15px;
     width: 100%;
-    height: 170px;
+    height: 160px;
     background: rgba(255, 255, 255, 0.05);
     border: 1px solid rgba(255, 255, 255, 0.25);
-
     transition: all 0.3s;
-
     color: var(--txt-clr);
-    border-radius: 85px;
-    padding: 25px;
-    transform: translateY(35px);
+    border-radius: 80px;
+    padding: 0 40px;
+    transform: translateY(30px);
     opacity: 0;
     h4 {
         font-weight: 600;
@@ -43,39 +40,14 @@
 
 @media (max-width: 1300px) {
     .services-grid {
-        display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: 50px;
-        margin: 0 25px;
+        margin: 0 15px;
     }
 }
 
 @media (max-width: 900px) {
-    .title-container {
-        padding: 15px;
-        margin-bottom: 35px;
-        background: rgba(0, 0, 0, 0.1);
-        color: var(--txt-clr);
-        div {
-            display: flex;
-            p {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                padding: 5px;
-                pointer-events: none;
-                opacity: 0.5;
-            }
-        }
-        h2 {
-            font-size: 3rem;
-        }
-    }
-
     .services-grid {
-        display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: 25px;
-        margin: 0 5px;
+        margin: 0;
     }
 }
