--- a/src/pages/AboutUs/AboutUs.scss
+++ b/src/pages/AboutUs/AboutUs.scss
@@ -12,7 +12,7 @@
 
 .about-us__team-grid {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     gap: 30px;
     padding: 0 30px 30px;
 }
@@ -22,7 +22,7 @@
     @include flex-around;
     flex-direction: column;
     width: 100%;
-    height: 350px;
+    height: min-content;
     background: rgba(0, 0, 0, 0.05);
     border: 1px solid rgba(255, 255, 255, 0.25);
     transition: border 150ms;
