--- a/src/pages/Contacts/Contacts.scss
+++ b/src/pages/Contacts/Contacts.scss
@@ -4,10 +4,9 @@
     padding-bottom: 30px;
 }
 
-.contacts__appointment-title {
-    font-size: 2rem;
+.contacts__secondary-info {
     text-align: center;
-    padding: 30px 0;
+    padding: 0 30px 30px;
 }
 
 .contacts-details {
@@ -69,6 +68,12 @@
     &:hover {
         background: transparent;
     }
+}
+
+.contacts__appointment-title {
+    font-size: 2rem;
+    text-align: center;
+    padding: 30px 0;
 }
 
 .contacts-form {
@@ -177,6 +182,12 @@ input[type="time"] {
 
     .contacts-form {
         width: 75%;
+    }
+}
+
+@media (max-width: 900px) {
+    .contacts__secondary-info {
+        padding: 0 15px 30px;
     }
 }
 
