--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -1,7 +1,10 @@
+.price-list {
+    padding: 0 30px 30px;
+}
+
 .price-list__table {
-    text-align: center;
     border-collapse: collapse;
-    margin: 0 30px 30px;
+    width: 100%;
 }
 
 tr {
@@ -32,4 +35,16 @@ tr:nth-child(odd) td:nth-of-type(1) {
 
 tr:nth-child(odd) td:nth-of-type(3) {
     border-radius: 0 30px 30px 0;
+}
+
+@media (max-width: 900px) {
+    .price-list {
+        padding: 0 15px 30px;
+    }
+}
+
+@media (max-width: 800px) {
+    .price-list {
+        padding: 0 0 30px;
+    }
 }
