--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -34,16 +34,12 @@
 }
 
 .header-bottom__container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    @include flex-between;
     margin-top: 30px;
 }
 
 .header__logo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-center;
 
     img {
         width: clamp(35px, 4vw, 40px);
@@ -66,20 +62,24 @@
 
 .nav-list__dropdown {
     position: relative;
-    height: 100%;
 }
 
 .nav-list__dropdown-list {
     position: absolute;
+    z-index: 1;
     width: max-content;
     background: var(--bg-clr);
-    padding: 10px;
     border-radius: 30px;
+    padding: 10px;
     border: 1px solid rgba(255, 255, 255, 0.25);
     transform: translateY(30px);
     opacity: 0;
     pointer-events: none;
-    transition: opacity 0.5s, transform 0.5s;
+    transition: opacity 0.3s, transform 0.3s;
+}
+
+.nav-list__menu-dropdown-list {
+    width: 100%;
 }
 
 .nav-list__dropdown:hover .nav-list__dropdown-list {
@@ -127,8 +127,10 @@
     grid-template-rows: 0fr;
     overflow: hidden;
     transition: all 0.3s ease-out;
+
     .menu-list {
         overflow: hidden;
+
         li {
             border-bottom: 1px solid rgba(255, 255, 255, 0.5);
         }
@@ -142,7 +144,7 @@
 
 .menu-item {
     opacity: 0;
-    transition: opacity 300ms;
+    transition: opacity 150ms;
 }
 
 .menu-item--active {
@@ -153,7 +155,7 @@
 .menu-link {
     @include flex-between;
     height: 60px;
-    transition: all 300ms;
+    transition: all 0.3s;
 
     span {
         font-weight: 500;
