--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,7 +1,8 @@
 @use "./../../mixins" as *;
 
 .header {
-    position: fixed;
+    // position: fixed;
+    position: absolute;
     top: 0;
     right: 5px;
     left: 5px;
@@ -64,6 +65,10 @@
     position: relative;
 }
 
+// .nav-list__menu-dropdown {
+//     position: relative;
+// }
+
 .nav-list__dropdown-list {
     position: absolute;
     z-index: 1;
@@ -74,18 +79,24 @@
     border: 1px solid rgba(255, 255, 255, 0.25);
     transform: translateY(30px);
     opacity: 0;
+    overflow: hidden;
     pointer-events: none;
     transition: opacity 0.3s, transform 0.3s;
 }
 
 .nav-list__menu-dropdown-list {
     width: 100%;
+    overflow: hidden;
 }
 
 .nav-list__dropdown:hover .nav-list__dropdown-list {
     opacity: 1;
     transform: translateY(0);
     pointer-events: all;
+}
+
+.nav-list__menu-dropdown:hover .menu-dropdown__wrapper {
+    grid-template-rows: 1fr;
 }
 
 .nav__link {
@@ -142,9 +153,29 @@
     padding: 30px 0;
 }
 
-.menu-item {
-    opacity: 0;
-    transition: opacity 150ms;
+.menu-dropdown-list {
+    overflow: hidden;
+    background: transparent;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 10px;
+    border-radius: 0;
+}
+
+.menu-dropdown__wrapper {
+    display: grid;
+    grid-template-rows: 0fr;
+    // width: 100%;
+    overflow: hidden;
+    transition: all 0.3s ease-out;
+}
+
+.menu-item:hover .menu-dropdown__wrapper {
+    grid-template-rows: 1fr;
+
+    // opacity: 0;
+    // transition: opacity 150ms;
 }
 
 .menu-item--active {
