--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -4,4 +4,5 @@
     --bg-semi-tp-clr: rgba(0, 0, 0, 0.5);
     --txt-clr: #fff;
     --accent-clr: #77df92;
+    --border-25: rgba(255, 255, 255, 0.25);
 }
