--- a/src/pages/PriceList/PriceList.scss
+++ b/src/pages/PriceList/PriceList.scss
@@ -1,10 +1,21 @@
 .price-list {
-    padding: 0 30px 30px;
+    // padding: 0 0 30px;
+}
+
+.price-list__wrapper {
+    padding: 0 30px;
+}
+
+.price-list__title {
+    font-size: 1.5rem;
+    font-weight: 500;
+    padding-bottom: 30px;
 }
 
 .price-list__table {
     border-collapse: collapse;
     width: 100%;
+    margin-bottom: 30px;
 }
 
 tr {
@@ -18,10 +29,6 @@ td:nth-child(1) {
 
 td:nth-child(2) {
     text-align: right;
-}
-
-td:nth-child(3) {
-    text-align: right;
     padding-right: 15px;
 }
 
@@ -33,18 +40,44 @@ tr:nth-child(odd) td:nth-of-type(1) {
     border-radius: 30px 0 0 30px;
 }
 
-tr:nth-child(odd) td:nth-of-type(3) {
+tr:nth-child(odd) td:nth-of-type(2) {
     border-radius: 0 30px 30px 0;
 }
 
+.filter-btn-wrapper {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+    margin: 0 30px 30px;
+}
+
+.inactive-filter-btn {
+    height: 60px;
+    border-radius: 30px;
+    padding: 0 15px;
+    border: 1px solid var(--accent-clr);
+}
+
+.active-filter-btn {
+    background: var(--accent-clr);
+}
+
 @media (max-width: 900px) {
-    .price-list {
-        padding: 0 15px 30px;
+    .price-list__wrapper {
+        padding: 0 15px;
+    }
+
+    .filter-btn-wrapper {
+        margin: 0 15px 30px;
     }
 }
 
 @media (max-width: 800px) {
-    .price-list {
-        padding: 0 0 30px;
+    .price-list__wrapper {
+        padding: 0;
+    }
+
+    .filter-btn-wrapper {
+        margin: 0 0 30px;
     }
 }
